--- a/css/index.css
+++ b/css/index.css
@@ -130,6 +130,12 @@
     margin-top: 15%;
     margin-left: 30%;
 }
+.sony-pictures {
+  width: 140px;
+  margin-top: 15%;
+  margin-left: 30%;
+  margin-bottom: 1%;
+}
 
 .education-pictures {
 
